syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";

package br.com.zup.edu;

import "google/protobuf/timestamp.proto";

service KeyManagerRegistraGrpcService {
  rpc cria(NovaChaveRequest) returns (NovaChaveResponse);
}

message NovaChaveRequest{
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;

}

message NovaChaveResponse{
  string clienteId = 1;
  string pixId = 2;
}

enum TipoConta {
  TIPO_CONTA_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoChave {
  TIPO_CHAVE_DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}
